package standard

/**
被装饰者(抽象)
*/
type Component interface {
	Operation()
}
